# ai-engineer-test

./: .gitignore  CLAUDE.md  Makefile  Procfile  docker-compose.ci.yml  plan-backend-review.md  plan-backend.md  plan-frontend-review.md  plan-frontend.md  plan-integration-review.md  requirements-ai-engineer-platform.md
alembic/: env.py
app/core/: ai.py  auth.py  email.py  errors.py  redis.py
app/models/: session.py  topic.py  (+1 more)
backend/: .env.example  Makefile  README.md  alembic.ini  docker-compose.ci.yml  docker-compose.yml  pyproject.toml
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/core/: certificates.py  config.py  database.py  errors.py  logging.py  rate_limit.py  scoring.py
backend/app/models/: __init__.py  certificate.py  pipeline.py  question.py  score.py
backend/app/repository/: certificates.py  questions.py  sessions.py  topics.py  users.py
backend/app/routes/: auth.py  results.py  sessions.py  users.py
backend/app/schemas/: auth.py  scores.py
backend/app/workers/: cleanup.py  scoring.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_ai_chat.py  test_results.py
backend/tests/repository/: conftest.py  test_questions_repo.py  test_scores_repo.py  test_stats_repo.py
backend/tests/unit/: test_auth_tokens.py  test_question_selection.py  test_scoring_logic.py
backend/tests/workers/: test_scoring_worker.py
frontend/: .env.local.example  .gitignore  README.md  middleware.ts  next.config.ts  openapi.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+82 files in other folders)
