[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crucible-backend"
version = "0.1.0"
description = "AI Engineer Assessment Platform Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "redis>=5.1.0",
    "celery[redis]>=5.4.0",
    "anthropic>=0.39.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.0.1",
    "httpx>=0.27.0",
    "pillow>=10.4.0",
    "boto3>=1.35.0",
    "resend>=2.4.0",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.16.0",
    "pybreaker>=1.2.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "anyio>=4.6.0",
    "pytest-anyio>=0.0.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "anyio>=4.14.1",
    "pytest-asyncio>=1.4.0",
]
